--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-# Compiled Object files
-*.o
-*.obj
-
-# Executables
-*.bin
-*.elf
-
-# PROS
-bin/
-.vscode/
+/.vscode
+/bin
+/build
 compile_commands.json
-temp.log
-temp.errors
-*.ini
-.d/
